# DataStructure-CMake-Template

./: CMakeLists.txt
APPS/app_Application_Analyzer/: Analyzer_app.cpp  CMakeLists.txt
APPS/app_Application_List/: CMakeLists.txt  List_app.cpp  List_app.h
APPS/app_Application_Matrix/: CMakeLists.txt  Matrixapp.cpp  Matrixapp.h  app.cpp  app.h
APPS/app_Application_Queue_on_list/: CMakeLists.txt  Queue_on_list_app.cpp  Queue_on_list_app.h
APPS/app_Application_Queue_on_list_erase/: CMakeLists.txt  Queue_on_list_app_erase.cpp  Queue_on_list_app_erase.h
APPS/app_Application_Queue_on_list_insert/: CMakeLists.txt  Queue_on_list_app_insert.cpp  Queue_on_list_app_insert.h
APPS/app_Application_Set/: CMakeLists.txt  Set_app.cpp  app.cpp  app.h
APPS/app_Application_Stack/: CMakeLists.txt  Stack_app.cpp  Stack_app.h  app.cpp  app.h
APPS/app_Application_Stack_on_list/: CMakeLists.txt  Stack_on_list_app.cpp  Stack_on_list_app.h
LIBS/lib_Arithmetic_Analyzer/: Analizer.cpp  Analizer.h  CMakeLists.txt  tinyexpr.c
LIBS/lib_Matrix/: matrix.h
LIBS/lib_Menu/: CMakeLists.txt  Color.h  Menu.cpp
LIBS/lib_Queue_on_list/: CMakeLists.txt  Queue_on_list.cpp  Queue_on_list.h
LIBS/lib_Queue_on_list_erase/: CMakeLists.txt  Queue_on_list_erase.cpp  Queue_on_list_erase.h
LIBS/lib_Queue_on_list_insert/: CMakeLists.txt  Queue_on_list_insert.cpp  Queue_on_list_insert.h
LIBS/lib_Stack/: CMakeLists.txt  Stack.cpp  Stack.h
LIBS/lib_Stack_on_list/: CMakeLists.txt  Stack_on_list.cpp  Stack_on_list.h
LIBS/lib_bitfield/: CMakeLists.txt  bitfield.cpp  bitfield.h
LIBS/lib_list/: CMakeLists.txt  List.cpp  List.h
LIBS/lib_set/: CMakeLists.txt  set.cpp  set.h
TESTS/Tests_Arithmetic_Analyzer/: CMakeLists.txt  test_analizer.cpp
TESTS/Tests_List/: CMakeLists.txt  test_list.cpp
TESTS/Tests_Matrix/: CMakeLists.txt
TESTS/Tests_Queue_on_list/: CMakeLists.txt  test_queue.cpp
TESTS/Tests_Queue_on_list_erase/: CMakeLists.txt
TESTS/Tests_Queue_on_list_insert/: CMakeLists.txt  test_queue_insert.cpp
TESTS/Tests_Set/: CMakeLists.txt  test_main.cpp  test_tbitfield.cpp  test_tset.cpp
TESTS/Tests_Stack/: CMakeLists.txt  test_stack.cpp
TESTS/Tests_Stack_on_list/: CMakeLists.txt  test_stack_on_list.cpp
